--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -43,16 +43,16 @@
 	
 	<div class="portfolio-container">
 
-		<img class="project-self-img" src="self-img.jpg"/>
+		<!--<img class="project-self-img" src="self-img.jpg"/>-->
 
 		<div class="project-divider"></div>
 		
-		<h2 class="project-main-header">Projects & Research:</h2>
-			<p class="project-main-header">Geographic Information Systems Analysis</p>
+		<h2 class="project-main-header">Projects, Research, and GIS:</h2>
+			<!--<p class="project-main-header">Geographic Information Systems Analysis</p>
 			<p class="project-main-header">Census and Historical Geospatial Data Analysis</p>
 			<p class="project-main-header">Historical Methods of Research</p>
 			<p class="project-main-header">Historiographical Analysis
-			<p class="project-main-header">Digital Humanities</p>
+			<p class="project-main-header">Digital Humanities</p>-->
 
 		<h3 class="project-subsection"><a name="Research and Digital Humanities">Research and Digital Humanities</a></h3>
 
@@ -69,9 +69,9 @@
 			<li class="project-navigation-item">
 				<a class="project-navigation-link" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
 			</li>
-			<li class="project-navigation-item">
+			<!--<li class="project-navigation-item">
 				<a class="project-navigation-link" href="#Historical Analysis">Historical Analysis</a>
-			</li>
+			</li>-->
 		</ul>
 	</nav>
 
@@ -166,8 +166,8 @@
 			<li class="project-navigation-item">
 				<a class="project-navigation-link" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
 			</li>
-			<li class="project-navigation-item">
-				<a class="project-navigation-link" href="#Historical Analysis">Historical Analysis</a>
+			<!--<li class="project-navigation-item">
+				<a class="project-navigation-link" href="#Historical Analysis">Historical Analysis</a>-->
 			</li>
 		</ul>
 	</nav>
@@ -338,7 +338,7 @@
 
 		</ul>
 
-	<h3 class="project-subsection"><a name="Historical Analysis">Historical Analysis</a></h3>
+	<!--<h3 class="project-subsection"><a name="Historical Analysis">Historical Analysis</a></h3>-->
 
 <nav class="portfolio-navigation">
 		<ul class="project-navigation-menu">			
@@ -353,15 +353,15 @@
 			<li class="project-navigation-item">
 				<a class="project-navigation-link" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
 			</li>
-			<li class="project-navigation-item">
+			<!--<li class="project-navigation-item">
 				<a class="project-navigation-link" href="#Historical Analysis">Historical Analysis</a>
-			</li>
+			</li>-->
 		</ul>
 	</nav>
 
 	<hr>
 
-		<ul>
+		<!--<ul>
 
 			<li class="project-link">
 
@@ -426,14 +426,14 @@
 			<li class="project-content">
 			</li>
 
-		</ul>
+		</ul>-->
 
 
 
 	</div>
 
 	<a href="#">
-		<footer>Last edited by Zachary C. Raslan : March 13, 2017
+		<footer>Last edited by Zachary C. Raslan : November 13, 2017
 		</footer>
 	</a>
 
