--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -56,7 +56,7 @@
 
 		<header>
 
-			<strong><a class="resume-short" href="resume-short-03-10-17.pdf" target="_blank">One Page (compressed) Resume - follow this link</a></strong>
+			<strong><a class="resume-short" href="resume-short-11-05-17.pdf" target="_blank">One Page (compressed) Resume - follow this link</a></strong>
 
 			<!--<div class="log-divider">. . . . . . .</div>-->
 
@@ -76,24 +76,38 @@
 
 					<section>
 						<h2 class="resume-headline">Experience</h2>
-							<strong>ClioGraphica | Location Intelligence Firm</strong>
-								<div class="sub-head-list">Founder/Operator</div>
+							<strong>ClioGraphica | Information Mapping for Strategic Planning</strong>
+								<div class="sub-head-list">Founder/Head of GIS</div>
 								<div class="sub-head-list">11/2015 - present</div>
 								<ul>
 									<li class="resume-list">Owner and Operator of ClioGraphica, a Location Intelligence Firm which aims to provide geospatial intelligence consulting services for non-profits organizations, client businesses, and municipalities</li>
-									<li class="resume-list">Develops Geodatabases for client use by GPS Data Collection Campaign, digitization of organization records, or other available data sources</li>
-									<li class="resume-list">Provide innovative geospatial services utilizing cutting edge technology and data models for a wide variety of clientele</li>
+									<li class="resume-list">(Municipal) Map Maintenance: mapping services for tax assessor, zoning, parks and recreation, conservation, environmental resources, and historic commission</li>
+									<li class="resume-list">GIS Support for (Municipal) Staff: providing (municipal) staff GIS training, ongoing technical support, and project outsourcing</li>
+									<li class="resume-list">Database Management and Administration: maintain (municipal department) databases, inputting field data, and generating reports using SQL</li>
+									<li class="resume-list">Asset ID and Strategic planning: helping (municipal) decision makers formulate strategic growth plans by providing analysis on their location based data</li>
+									<li class="resume-list">Mobile Application development: creating user friendly interfaces for custom data gathering tools for staff operating in the field, and applications for residents to communicate with their municipality</li>
+									<li class="resume-list">Desktop Application development: creating standalone desktop applications to help staff streamline workflow and process/archive data</li>
 									<li class="resume-list">Client Reviews:
 									<a href="cliographica-claudia-testimonial-01-07-17.pdf" target="_blank">Claudia Wolen</a>, Education Coordinator, Stamford Historical Society</li>
 								</ul>
+							<strong><a href="https://www.raslanforansonia.com/" target="_blank">Raslan for Mayor: Ansonia, CT</a></strong>
+								<div class="sub-head-list">Campaign Manager and Geospatial Consultant</div>
+								<div class="sub-head-list">09/2017 - 11/2017</div>
+								<ul>
+									<li class="resume-list">While campaign manager I coordinated events, outreach, volunteers, and research. This included using the DNC VoteBuilder platform to organize lists of people to contact through phonebaking and canvasing</li>
+									<li class="resume-list"><a href="2017-10-clio-ansonia-campaign-maps.pdf" target="_blank">Campaign Maps</a></li>
+									<li class="resume-list">As the Geospatial Consultant, I provided maps and spatial analysis which contributed to the policy research and platform messages of our campaign. Examples of these analyses include number of residential parcels within "walking-distance" to parks and school centers, density of dwelling units, distribution of residential taxes paid by building square foot, population distribution, and proposals for bus stop locations which would be within walking-distance to over 90% of residential parcels in town</li>
+									<a href="2017-09-21-clio-300dpi-community-dev-analysis.jpg" target="_blank"><img class="project-img" src="2017-09-21-clio-300dpi-community-dev-analysis.jpg"/></a>
+									<a href="2017-09-12-clio-300dpi-residential-tax-analysis.jpg" target="_blank"><img class="project-img" src="2017-09-12-clio-300dpi-residential-tax-analysis.jpg"/></a>
+									<li class="resume-list"></li>
+								</ul>
 							<strong>Housatonic Valley Association (HVA)</strong>
-								<div class="sub-head-list">GIS Manager/Developer</div>
+								<div class="sub-head-list">GIS Manager</div>
 								<div class="sub-head-list">09/2016 - 01/2017</div>
 								<ul>
-									<li class="resume-list">Head of GIS Department</li>
-									<li class="resume-list">Manage HVA’s GIS department which works in coordination with internal departments (i.e. Watershed Planning Department and field crew) and external clients such as local municipalities, land trusts organizations, and individuals seeking GIS analysis or general mapping services. Common GIS projects include multi-variable site selection analysis, environmental/natural resources modeling, parcel editing, and geospatial database creation. Currently re-organizing/centralizing company GIS for greater efficiency among workgroup of GIS users at main office</li>
-									<li class="resume-list">Facilitate the development of regional and local geospatial datasets, managing the collection, formatting, and assimilation of various demographic/environmental/natural resource/geospatial data from a variety of sources – including the creation of data by field sampling</li>
-									<li class="resume-list">Maintain online GIS platforms (ArcGIS for Server Enterprise, ArcSDE, ArcGIS Online, App Studio for ArcGIS) consisting of HVA created regional datasets. Currently in the process of creating mobile Geo-applications for “reporter” and “tour” type function. Update, revise, and create new Web Mapping Services and Web Applications for regional conservation initiatives</li>
+									<li class="resume-list">Managed HVA’s GIS department which works in coordination with internal departments (i.e. Watershed Planning Department and field crew) and external clients such as local municipalities, land trusts organizations, and individuals seeking GIS analysis or general mapping services. Common GIS projects included multi-variable site selection analysis, environmental/natural resources modeling, parcel editing, and geospatial database creation. Re-organized/centralized company GIS for greater efficiency among workgroup of GIS users at main office</li>
+									<li class="resume-list">Facilitated the development of regional and local geospatial datasets, managed the collection, formatting, and assimilation of various demographic/environmental/natural resource/geospatial data from a variety of sources – including the creation of data by field sampling</li>
+									<li class="resume-list">Maintained online GIS platforms (ArcGIS for Server Enterprise, ArcSDE, ArcGIS Online, App Studio for ArcGIS) consisting of HVA created regional datasets. Before leaving, I was in the process of creating mobile Geo-applications for “reporter” and “tour” type function. Updated, revised, and created new Web Mapping Services and Web Applications for regional conservation initiatives</li>
 								</ul>
 							<strong>WyzAnt Tutoring, Inc.</strong>
 								<div class="sub-head-list">GIS, Geospatial, History, and Digital Humanities Tutor</div>
@@ -101,6 +115,10 @@
 								<ul>
 									<li class="resume-list">Tutor graduate and undergraduate level GIS practices, system and database administration, and geospatial analytics</li>
 									<li class="resume-list">Graduate and undergraduate level history tutor - focus on analytical writing and Digital Humanities research</li>
+									<li class="resume-list">Student projects:</li>
+									<li class="resume-list"><a href="2016-04-20-tutor-haneen-talal-fracking-project.pdf" target="_blank">Haneen Talal - Fracking Project</a></li>
+									<li class="resume-list"><a href="2017-10-25-tutor-mike-moran-wilton-land-trust-map.pdf" target="_blank">Mike Moran - Wilton, CT Land Trust Annual Assessment</a></li>
+									<li class="resume-list"><a href="2017-11-11-tutor-ritchele-saint-louis-raster-analysis.jpg" target="_blank">Ritchele Saint Louis - Raster Analysis Central Park, NYC</a></li>
 								</ul>
 							<strong><a href="http://omeka1.lib.uconn.edu/welcome" target="_blank">Virtual Hartford Research Team</a></strong>
 								<div class="sub-head-list">Digital Humanities Researcher, GIS Specialist</div>
@@ -270,7 +288,7 @@
 					</section>
 			<hr>
 
-<div class="resume-section-buffer"></div>
+<!--<div class="resume-section-buffer"></div>
 
 			<hr>
 
@@ -354,7 +372,7 @@
 					</div>
 					</section>
 
-			<hr>
+			<hr>-->
 
 <div class="resume-section-buffer"></div>
 				
@@ -375,7 +393,7 @@
 	</div>
 
 	<a href="#">
-		<footer>Last edited by Zachary C. Raslan : March 13, 2017
+		<footer>Last edited by Zachary C. Raslan : November 13, 2017
 		</footer>
 	</a>
 
