--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -45,10 +45,13 @@
 
 	<div class="resume-img-container">
 
-		<img class="resume-img" src="geocoding-pic.jpg"/>
-		<img class="resume-img" src="img-buffer.jpg"/>
-		<img class="resume-img" src="img-charcoal-hearths.jpg"/>
-		<img class="resume-img" src="network-pic.jpg"/>
+		<!--<img class="resume-img" src="img-charcoal-hearths.jpg"/>-->
+		<img class="resume-img" src="2017-09-21-clio-300dpi-community-dev-analysis.jpg"/>
+		<img class="resume-img" src="stamford-historical-society-walk-on-world-map-portfolio.png"/>
+		<img class="resume-img" src="2017-09-25-clio-st-paul-res-parc-emf-dwell-den.png"/>
+		<!--<img class="resume-img" src="network-pic.jpg"/>-->
+		<!--<img class="resume-img" src="2017-10-25-tutor-mike-moran-wilton-land-trust-map.pdf"/>-->
+		<!--<img class="resume-img" src="2017-09-12-clio-300dpi-residential-tax-analysis.jpg"/>-->
 
 	</div>
 		
@@ -56,7 +59,7 @@
 
 		<header>
 
-			<strong><a class="resume-short" href="resume-short-11-05-17.pdf" target="_blank">One Page (compressed) Resume - follow this link</a></strong>
+			<strong><a class="resume-short" href="resume-short-11-13-17.pdf" target="_blank">One Page (compressed) Resume - follow this link</a></strong>
 
 			<!--<div class="log-divider">. . . . . . .</div>-->
 
@@ -68,7 +71,7 @@
 
 		</header>
 
-<div class="resume-section-buffer-top"></div>
+<!--<div class="resume-section-buffer-top"></div>-->
 
 		<main>
 
@@ -88,7 +91,18 @@
 									<li class="resume-list">Mobile Application development: creating user friendly interfaces for custom data gathering tools for staff operating in the field, and applications for residents to communicate with their municipality</li>
 									<li class="resume-list">Desktop Application development: creating standalone desktop applications to help staff streamline workflow and process/archive data</li>
 									<li class="resume-list">Client Reviews:
-									<a href="cliographica-claudia-testimonial-01-07-17.pdf" target="_blank">Claudia Wolen</a>, Education Coordinator, Stamford Historical Society</li>
+									<a href="clio-2017-01-17-stamford-hist-soc-testimonial-img_1.jpg" target="_blank">Claudia Wolen</a>, Education Coordinator, Stamford Historical Society</li>
+								</ul>
+							<strong>WyzAnt Tutoring, Inc.</strong>
+								<div class="sub-head-list">GIS, Geospatial, History, and Digital Humanities Tutor</div>
+								<div class="sub-head-list">10/2014 - present</div>
+								<ul>
+									<li class="resume-list"><a href="2017-11-14-tutor-all.pdf" target="_blank">Student Projects</a></li>
+									<li class="resume-list">Tutor graduate and undergraduate level GIS practices, system and database administration, and geospatial analytics</li>
+									<li class="resume-list">Graduate and undergraduate level history tutor - focus on analytical writing and Digital Humanities research</li>
+									<!--<li class="resume-list"><a href="2016-04-20-tutor-haneen-talal-fracking-project.pdf" target="_blank">Haneen Talal - Fracking Project</a></li>
+									<li class="resume-list"><a href="2017-10-25-tutor-mike-moran-wilton-land-trust-map.pdf" target="_blank">Mike Moran - Wilton, CT Land Trust Annual Assessment</a></li>
+									<li class="resume-list"><a href="2017-11-11-tutor-ritchele-saint-louis-raster-analysis.jpg" target="_blank">Ritchele Saint Louis - Raster Analysis Central Park, NYC</a></li>-->
 								</ul>
 							<strong><a href="https://www.raslanforansonia.com/" target="_blank">Raslan for Mayor: Ansonia, CT</a></strong>
 								<div class="sub-head-list">Campaign Manager and Geospatial Consultant</div>
@@ -97,8 +111,6 @@
 									<li class="resume-list">While campaign manager I coordinated events, outreach, volunteers, and research. This included using the DNC VoteBuilder platform to organize lists of people to contact through phonebaking and canvasing</li>
 									<li class="resume-list"><a href="2017-10-clio-ansonia-campaign-maps.pdf" target="_blank">Campaign Maps</a></li>
 									<li class="resume-list">As the Geospatial Consultant, I provided maps and spatial analysis which contributed to the policy research and platform messages of our campaign. Examples of these analyses include number of residential parcels within "walking-distance" to parks and school centers, density of dwelling units, distribution of residential taxes paid by building square foot, population distribution, and proposals for bus stop locations which would be within walking-distance to over 90% of residential parcels in town</li>
-									<a href="2017-09-21-clio-300dpi-community-dev-analysis.jpg" target="_blank"><img class="project-img" src="2017-09-21-clio-300dpi-community-dev-analysis.jpg"/></a>
-									<li class="resume-list"></li>
 								</ul>
 							<strong>Housatonic Valley Association (HVA)</strong>
 								<div class="sub-head-list">GIS Manager</div>
@@ -107,17 +119,6 @@
 									<li class="resume-list">Managed HVA’s GIS department which works in coordination with internal departments (i.e. Watershed Planning Department and field crew) and external clients such as local municipalities, land trusts organizations, and individuals seeking GIS analysis or general mapping services. Common GIS projects included multi-variable site selection analysis, environmental/natural resources modeling, parcel editing, and geospatial database creation. Re-organized/centralized company GIS for greater efficiency among workgroup of GIS users at main office</li>
 									<li class="resume-list">Facilitated the development of regional and local geospatial datasets, managed the collection, formatting, and assimilation of various demographic/environmental/natural resource/geospatial data from a variety of sources – including the creation of data by field sampling</li>
 									<li class="resume-list">Maintained online GIS platforms (ArcGIS for Server Enterprise, ArcSDE, ArcGIS Online, App Studio for ArcGIS) consisting of HVA created regional datasets. Before leaving, I was in the process of creating mobile Geo-applications for “reporter” and “tour” type function. Updated, revised, and created new Web Mapping Services and Web Applications for regional conservation initiatives</li>
-								</ul>
-							<strong>WyzAnt Tutoring, Inc.</strong>
-								<div class="sub-head-list">GIS, Geospatial, History, and Digital Humanities Tutor</div>
-								<div class="sub-head-list">10/2014 - 09/2016</div>
-								<ul>
-									<li class="resume-list">Tutor graduate and undergraduate level GIS practices, system and database administration, and geospatial analytics</li>
-									<li class="resume-list">Graduate and undergraduate level history tutor - focus on analytical writing and Digital Humanities research</li>
-									<li class="resume-list">Student projects:</li>
-									<li class="resume-list"><a href="2016-04-20-tutor-haneen-talal-fracking-project.pdf" target="_blank">Haneen Talal - Fracking Project</a></li>
-									<li class="resume-list"><a href="2017-10-25-tutor-mike-moran-wilton-land-trust-map.pdf" target="_blank">Mike Moran - Wilton, CT Land Trust Annual Assessment</a></li>
-									<li class="resume-list"><a href="2017-11-11-tutor-ritchele-saint-louis-raster-analysis.jpg" target="_blank">Ritchele Saint Louis - Raster Analysis Central Park, NYC</a></li>
 								</ul>
 							<strong><a href="http://omeka1.lib.uconn.edu/welcome" target="_blank">Virtual Hartford Research Team</a></strong>
 								<div class="sub-head-list">Digital Humanities Researcher, GIS Specialist</div>
@@ -392,7 +393,7 @@
 	</div>
 
 	<a href="#">
-		<footer>Last edited by Zachary C. Raslan : November 13, 2017
+		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : November 13, 2017
 		</footer>
 	</a>
 
