--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -82,21 +82,21 @@
 <h3 class="project-subsection"><a name="ClioGraphica">ClioGraphica</a></h3>
 
 <nav class="portfolio-navigation">
-		<ul class="project-navigation-menu">			
-			<li class="project-navigation-item">
-				<a class="project-navigation-link" href="#">Top of Page</a>
+		<ul class="project-navigation-menu-body">			
+			<li class="project-navigation-item-body">
+				<a class="project-navigation-link-body" href="#">Top of Page</a>
 			</li>
 
-			<li class="project-navigation-item">
-				<a class="project-navigation-link" href="#ClioGraphica">ClioGraphica</a>
+			<li class="project-navigation-item-body">
+				<a class="project-navigation-link-body" href="#ClioGraphica">ClioGraphica</a>
 			</li>
 
-			<li class="project-navigation-item">
-				<a class="project-navigation-link" href="#Research Projects">Research Projects</a>
+			<li class="project-navigation-item-body">
+				<a class="project-navigation-link-body" href="#Research Projects">Research Projects</a>
 			</li>
 			
-			<li class="project-navigation-item">
-				<a class="project-navigation-link" href="#GIS Coursework Samples">GIS Coursework Samples</a>
+			<li class="project-navigation-item-body">
+				<a class="project-navigation-link-body" href="#GIS Coursework Samples">GIS Coursework Samples</a>
 			</li>
 			<!--<li class="project-navigation-item">
 				<a class="project-navigation-link" href="#Historical Analysis">Historical Analysis</a>
@@ -193,21 +193,21 @@
 <h3 class="project-subsection"><a name="Research Projects">Research Projects</a></h3>
 
 <nav class="portfolio-navigation">
-		<ul class="project-navigation-menu">			
-			<li class="project-navigation-item">
-				<a class="project-navigation-link" href="#">Top of Page</a>
+		<ul class="project-navigation-menu-body">			
+			<li class="project-navigation-item-body">
+				<a class="project-navigation-link-body" href="#">Top of Page</a>
 			</li>
 
-			<li class="project-navigation-item">
-				<a class="project-navigation-link" href="#ClioGraphica">ClioGraphica</a>
+			<li class="project-navigation-item-body">
+				<a class="project-navigation-link-body" href="#ClioGraphica">ClioGraphica</a>
 			</li>
 
-			<li class="project-navigation-item">
-				<a class="project-navigation-link" href="#Research Projects">Research Projects</a>
+			<li class="project-navigation-item-body">
+				<a class="project-navigation-link-body" href="#Research Projects">Research Projects</a>
 			</li>
 			
-			<li class="project-navigation-item">
-				<a class="project-navigation-link" href="#GIS Coursework Samples">GIS Coursework Samples</a>
+			<li class="project-navigation-item-body">
+				<a class="project-navigation-link-body" href="#GIS Coursework Samples">GIS Coursework Samples</a>
 			</li>
 			<!--<li class="project-navigation-item">
 				<a class="project-navigation-link" href="#Historical Analysis">Historical Analysis</a>
@@ -310,21 +310,21 @@
 		</ul>
 	</nav>-->
 	<nav class="portfolio-navigation">
-		<ul class="project-navigation-menu">			
-			<li class="project-navigation-item">
-				<a class="project-navigation-link" href="#">Top of Page</a>
+		<ul class="project-navigation-menu-body">			
+			<li class="project-navigation-item-body">
+				<a class="project-navigation-link-body" href="#">Top of Page</a>
 			</li>
 
-			<li class="project-navigation-item">
-				<a class="project-navigation-link" href="#ClioGraphica">ClioGraphica</a>
+			<li class="project-navigation-item-body">
+				<a class="project-navigation-link-body" href="#ClioGraphica">ClioGraphica</a>
 			</li>
 
-			<li class="project-navigation-item">
-				<a class="project-navigation-link" href="#Research Projects">Research Projects</a>
+			<li class="project-navigation-item-body">
+				<a class="project-navigation-link-body" href="#Research Projects">Research Projects</a>
 			</li>
 			
-			<li class="project-navigation-item">
-				<a class="project-navigation-link" href="#GIS Coursework Samples">GIS Coursework Samples</a>
+			<li class="project-navigation-item-body">
+				<a class="project-navigation-link-body" href="#GIS Coursework Samples">GIS Coursework Samples</a>
 			</li>
 			<!--<li class="project-navigation-item">
 				<a class="project-navigation-link" href="#Historical Analysis">Historical Analysis</a>
