reduced res on project and resume pics

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -46,28 +46,30 @@
 	<div class="resume-img-container">
 
 		<!--<img class="resume-img" src="img-charcoal-hearths.jpg"/>-->
+		
+		<!--
 		<img class="resume-img" src="2017-09-21-clio-300dpi-community-dev-analysis.jpg"/>
 		<img class="resume-img" src="stamford-historical-society-walk-on-world-map-portfolio.png"/>
 		<img class="resume-img" src="2017-09-25-clio-st-paul-res-parc-emf-dwell-den.png"/>
+		-->
+
 		<!--<img class="resume-img" src="network-pic.jpg"/>-->
 		<!--<img class="resume-img" src="2017-10-25-tutor-mike-moran-wilton-land-trust-map.pdf"/>-->
 		<!--<img class="resume-img" src="2017-09-12-clio-300dpi-residential-tax-analysis.jpg"/>-->
 
 	</div>
 		
-		<h2>Curricula Vitae</h2>
+		<h2 class="resume-h2">Curricula Vitae</h2>
 
 		<header>
 
 			<strong><a class="resume-short" href="resume-short-11-13-17.pdf" target="_blank">One Page (compressed) Resume - follow this link</a></strong>
 
-			<!--<div class="log-divider">. . . . . . .</div>-->
+			<div class="log-divider">. . . . . . .</div>
 
 			<strong class="resume-headline">Researcher/Analyst, Cartographer, GIS Analyst</strong>
 			
-			<a class="resume-link" href="https://www.linkedin.com/uas/login" target="_blank">Find me on LinkedIn</a>
-
-			<div class="log-divider">. . . . . . .</div>
+			<!--<a class="resume-link" href="https://www.linkedin.com/uas/login" target="_blank">Find me on LinkedIn</a>-->
 
 		</header>
 
@@ -106,7 +108,7 @@
 								</ul>
 							<strong><a href="https://www.raslanforansonia.com/" target="_blank">Raslan for Mayor: Ansonia, CT</a></strong>
 								<div class="sub-head-list">Campaign Manager and Geospatial Consultant</div>
-								<div class="sub-head-list">09/2017 - 11/2017</div>
+								<div class="sub-head-list">08/2017 - 11/2017</div>
 								<ul>
 									<li class="resume-list">While campaign manager I coordinated events, outreach, volunteers, and research. This included using the DNC VoteBuilder platform to organize lists of people to contact through phonebaking and canvasing</li>
 									<li class="resume-list"><a href="2017-10-clio-ansonia-campaign-maps.pdf" target="_blank">Campaign Maps</a></li>
