editing the images

--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -152,10 +152,11 @@
 
 		<div class="log-divider">. . . .</div>
 
-				<a href="clio-2017-10-20-bus-stops.jpg" target="_blank">
+				<a href="clio-2017-10-20-bus-year-signs-img-1.pdf" target="_blank">
 				<img class="project-img" src="clio-2017-10-20-bus-stops-1.jpg"/>
 				</a>
 
+		<!--
 		<div class="log-divider">. . . .</div>
 
 				<a href="clio-2017-10-20-histo-map.jpg" target="_blank">
@@ -167,12 +168,13 @@
 				<a href="clio-2017-08-12-campaign-sign-locations.jpg" target="_blank">
 				<img class="project-img" src="clio-2017-08-12-camp-signs-1.jpg"/>
 				</a>
+		-->
 
 			</div>
 
 			<li class="project-content">
 
-				<p>As the Geospatial Consultant for a Mayoral campaign in Ansonia, CT, I provided maps and spatial analysis which contributed to the policy research and platform messages of our campaign. Examples of these analyses include number of residential parcels within "walking-distance" to parks and school centers, walking distance to proposed shuttle stops, density of dwelling units, distribution of residential taxes paid by building square foot, population distribution, and proposals for bus stop locations which would be within walking-distance to over 90% of residential parcels in town.</p>
+				<p>As the Geospatial Consultant for a Mayoral campaign in Ansonia, CT, I provided maps and spatial analysis which contributed to the policy research and platform messages of our campaign. Examples of these analyses include number of residential parcels within "walking-distance" to parks and school centers, density of dwelling units, distribution of residential taxes paid by building square foot, population distribution, and proposals for bus stop locations which would be within walking-distance to over 90% of residential parcels in town.</p>
 
 			</li>
 
