--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -48,11 +48,11 @@
 		<!--<img class="resume-img" src="img-charcoal-hearths.jpg"/>-->
 		
 		<!--
-		<img class="resume-img" src="2017-09-21-clio-300dpi-community-dev-analysis.jpg"/>
 		<img class="resume-img" src="stamford-historical-society-walk-on-world-map-portfolio.png"/>
 		<img class="resume-img" src="2017-09-25-clio-st-paul-res-parc-emf-dwell-den.png"/>
 		-->
-
+		<img class="resume-img" src="clio-2017-09-21-300dpi-community-dev-analysis-1.jpg"/>
+		<img class="resume-img" src="clio-2017-09-12-300dpi-residential-tax-analysis-1.jpg"/>
 		<!--<img class="resume-img" src="network-pic.jpg"/>-->
 		<!--<img class="resume-img" src="2017-10-25-tutor-mike-moran-wilton-land-trust-map.pdf"/>-->
 		<!--<img class="resume-img" src="2017-09-12-clio-300dpi-residential-tax-analysis.jpg"/>-->
@@ -72,6 +72,12 @@
 			<!--<a class="resume-link" href="https://www.linkedin.com/uas/login" target="_blank">Find me on LinkedIn</a>-->
 
 		</header>
+
+<!--<div class="resume-img-container">
+
+<img class="resume-img" src="clio-2017-11-13-stamford-hist-soc-walk-on-world-map-portfolio-1.jpg"/>
+
+</div>-->
 
 <!--<div class="resume-section-buffer-top"></div>-->
 
