--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -112,8 +112,8 @@
 
 			<div class="project-link">
 
-				<a href="clio-2017-11-13-stamford-hist-soc-walk-on-world-map-portfolio.png" target="_blank">
-				<img class="project-img" src="clio-2017-11-13-stamford-hist-soc-walk-on-world-map-portfolio-1.jpg"/>
+				<a href="clio-2017-12-24-world-colored-final.jpg" target="_blank">
+				<img class="project-img" src="clio-2017-12-24-world-colored-final-display.jpg"/>
 				</a>
 				
 			</div>
