--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -87,6 +87,17 @@
 
 					<section>
 						<h2 class="resume-headline">Experience</h2>
+							<strong><a href="http://chselab.com/" target="_blank">Critical Health and Social Ecology Lab, Wesleyan University</a></strong>
+								<div class="sub-head-list">Geospatial Research Associate</div>
+								<div class="sub-head-list">01/2018 - present</div>
+								<ul>
+									<li class="resume-list">Social Sciences GIS Analyst with Critical Health and Social Ecology Lab in Psychology Department of Wesleyan University</li>
+									<li class="resume-list">GIS analysis of psychological data sets allows our lab to spatially analyze the distribution of responses to survey questions gauging participants' social well being, community connection, physical health, etc.</li>
+									<li class="resume-list">Developed and presented workshops for our lab as well as undergraduate psychology research classes, "Introduction to GIS: Workshop for Interdisciplinary Social Sciences Research"</li>
+									<li class="resume-list">Work directly with students interested in GIS projects on campus. Provide tutoring services as well as connecting students with resources on campus and online</li><li class="resume-list">In development of Web Mapping Service to display lab data, as well as host data online and provide links to our website for students to download directly</li>
+									<li class="resume-list"><a href="2018-01-24-chse-tast.jpg" target="_blank">Ten ft. by five ft. vynal map of Transatlantic Slave Trade</a></li>
+									<li class="resume-list"></li>
+								</ul>
 							<strong>ClioGraphica | Information Mapping for Strategic Planning</strong>
 								<div class="sub-head-list">Founder/Head of GIS</div>
 								<div class="sub-head-list">11/2015 - present</div>
