--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -619,7 +619,7 @@
 	</div>
 
 	<a href="#">
-		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : November 13, 2017
+		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : May 5th, 2018
 		</footer>
 	</a>
 
