--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -63,7 +63,7 @@
 
 		<header>
 
-			<strong><a class="resume-short" href="resume-short-05-20-18.pdf" target="_blank">One Page (compressed) Resume - follow this link</a></strong>
+			<strong><a class="resume-short" href="resume-short-04-09-19.pdf" target="_blank">One Page (compressed) Resume - follow this link</a></strong>
 
 			<div class="log-divider">. . . . . . .</div>
 
@@ -87,16 +87,15 @@
 
 					<section>
 						<h2 class="resume-headline">Experience</h2>
-							<strong><a href="http://chselab.com/" target="_blank">Critical Health and Social Ecology Lab, Wesleyan University</a></strong>
-								<div class="sub-head-list">Geospatial Research Associate</div>
-								<div class="sub-head-list">01/2018 - present</div>
+							<strong><a href="https://www.kljeng.com/" target="_blank">KLJ Engineering: St. Paul, MN Office</a></strong>
+								<div class="sub-head-list">GIS Analyst</div>
+								<div class="sub-head-list">10/2018 - present</div>
 								<ul>
-									<li class="resume-list">Social Sciences GIS Analyst with Critical Health and Social Ecology Lab in Psychology Department of Wesleyan University</li>
-									<li class="resume-list">GIS analysis of psychological data sets allows our lab to spatially analyze the distribution of responses to survey questions gauging participants' social well being, community connection, physical health, etc.</li>
-									<li class="resume-list">Developed and presented workshops for our lab as well as undergraduate psychology research classes, "Introduction to GIS: Workshop for Interdisciplinary Social Sciences Research"</li>
-									<li class="resume-list">Work directly with students interested in GIS projects on campus. Provide tutoring services as well as connecting students with resources on campus and online</li><li class="resume-list">In development of Web Mapping Service to display lab data, as well as host data online and provide links to our website for students to download directly</li>
-									<li class="resume-list"><a href="2018-01-24-chse-tast.jpg" target="_blank">Ten ft. by five ft. vynal map of Transatlantic Slave Trade</a></li>
-									<li class="resume-list"></li>
+									<li class="resume-list">GIS department, Telecommunications Division</li>
+									<li class="resume-list">Low Level Design (LLD) drafting using ArcGIS 10.6.1 and AutoCAD Map 3D</li>
+									<li class="resume-list">Training and assisting supporting staff and team members</li>
+									<li class="resume-list">Construction staking sheets production for fiber optic cable networks</li>
+									<li class="resume-list">Implementation of data driven pages, database creation and organization, cartographic design, and team coordination</li>
 								</ul>
 							<strong>ClioGraphica | Information Mapping for Strategic Planning</strong>
 								<div class="sub-head-list">Founder/Head of GIS</div>
@@ -112,9 +111,20 @@
 									<li class="resume-list">Client Reviews:
 									<a href="clio-2017-01-17-stamford-hist-soc-testimonial-img_1.jpg" target="_blank">Claudia Wolen</a>, Education Coordinator, Stamford Historical Society</li>
 								</ul>
+							<strong><a href="http://chselab.com/" target="_blank">Critical Health and Social Ecology Lab, Wesleyan University</a></strong>
+								<div class="sub-head-list">Geospatial Research Associate</div>
+								<div class="sub-head-list">01/2018 - 10/2018</div>
+								<ul>
+									<li class="resume-list">Social Sciences GIS Analyst with Critical Health and Social Ecology Lab in Psychology Department of Wesleyan University</li>
+									<li class="resume-list">GIS analysis of psychological data sets allows our lab to spatially analyze the distribution of responses to survey questions gauging participants' social well being, community connection, physical health, etc.</li>
+									<li class="resume-list">Developed and presented workshops for our lab as well as undergraduate psychology research classes, "Introduction to GIS: Workshop for Interdisciplinary Social Sciences Research"</li>
+									<li class="resume-list">Work directly with students interested in GIS projects on campus. Provide tutoring services as well as connecting students with resources on campus and online</li><li class="resume-list">In development of Web Mapping Service to display lab data, as well as host data online and provide links to our website for students to download directly</li>
+									<li class="resume-list"><a href="2018-01-24-chse-tast.jpg" target="_blank">Ten ft. by five ft. vynal map of Transatlantic Slave Trade</a></li>
+									<li class="resume-list"></li>
+								</ul>
 							<strong>WyzAnt Tutoring, Inc.</strong>
 								<div class="sub-head-list">GIS, Geospatial, History, and Digital Humanities Tutor</div>
-								<div class="sub-head-list">10/2014 - present</div>
+								<div class="sub-head-list">10/2014 - 06/2018</div>
 								<ul>
 									<li class="resume-list"><a href="2017-11-14-tutor-all.pdf" target="_blank">Student Projects</a></li>
 									<li class="resume-list">Tutor graduate and undergraduate level GIS practices, system and database administration, and geospatial analytics</li>
@@ -412,7 +422,7 @@
 	</div>
 
 	<a href="#">
-		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : May 5th, 2018
+		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : April 9th, 2019
 		</footer>
 	</a>
 
