--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -87,7 +87,7 @@
 
 					<section>
 						<h2 class="resume-headline">Experience</h2>
-							<strong><a href="https://www.kljeng.com/" target="_blank">KLJ Engineering: St. Paul, MN Office</a></strong>
+							<strong><a href="https://www.kljeng.com/" target="_blank">KLJ Engineering</a>: St. Paul, MN Office</strong>
 								<div class="sub-head-list">GIS Analyst</div>
 								<div class="sub-head-list">10/2018 - present</div>
 								<ul>
