--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -87,16 +87,6 @@
 
 					<section>
 						<h2 class="resume-headline">Experience</h2>
-							<strong><a href="https://www.kljeng.com/" target="_blank">KLJ Engineering</a>: St. Paul, MN Office</strong>
-								<div class="sub-head-list">GIS Analyst</div>
-								<div class="sub-head-list">10/2018 - present</div>
-								<ul>
-									<li class="resume-list">GIS department, Telecommunications Division</li>
-									<li class="resume-list">Low Level Design (LLD) drafting using ArcGIS 10.6.1 and AutoCAD Map 3D</li>
-									<li class="resume-list">Training and assisting supporting staff and team members</li>
-									<li class="resume-list">Construction staking sheets production for fiber optic cable networks</li>
-									<li class="resume-list">Implementation of data driven pages, database creation and organization, cartographic design, and team coordination</li>
-								</ul>
 							<strong>ClioGraphica | Information Mapping for Strategic Planning</strong>
 								<div class="sub-head-list">Founder/Head of GIS</div>
 								<div class="sub-head-list">11/2015 - present</div>
@@ -110,6 +100,16 @@
 									<li class="resume-list">Desktop Application development: creating standalone desktop applications to help staff streamline workflow and process/archive data</li>
 									<li class="resume-list">Client Reviews:
 									<a href="clio-2017-01-17-stamford-hist-soc-testimonial-img_1.jpg" target="_blank">Claudia Wolen</a>, Education Coordinator, Stamford Historical Society</li>
+								</ul>
+							<strong><a href="https://www.kljeng.com/" target="_blank">KLJ Engineering</a>: St. Paul, MN Office</strong>
+								<div class="sub-head-list">GIS Analyst</div>
+								<div class="sub-head-list">10/2018 - 06/2019</div>
+								<ul>
+									<li class="resume-list">GIS department, Telecommunications Division</li>
+									<li class="resume-list">Low Level Design (LLD) drafting using ArcGIS 10.6.1 and AutoCAD Map 3D</li>
+									<li class="resume-list">Training and assisting supporting staff and team members</li>
+									<li class="resume-list">Construction staking sheets production for fiber optic cable networks</li>
+									<li class="resume-list">Implementation of data driven pages, database creation and organization, cartographic design, and team coordination</li>
 								</ul>
 							<strong><a href="http://chselab.com/" target="_blank">Critical Health and Social Ecology Lab, Wesleyan University</a></strong>
 								<div class="sub-head-list">Geospatial Research Associate</div>
