--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -87,6 +87,13 @@
 
 					<section>
 						<h2 class="resume-headline">Experience</h2>
+							<strong>Xcel Energy</strong>
+								<div class="sub-head-list">GIS Technician II, Utility GIS</div>
+								<div class="sub-head-list">12/2019 - present</div>
+								<ul>
+									<li class="resume-list">GIS Technician in Electric Division of Geospatial Department</li>
+									<li class="resume-list">Quality Control of GIS and Electric Distribution Grid Data as part of Advanced Distribution Management System (ADMS) Team</li>
+								</ul>
 							<strong>ClioGraphica | Information Mapping for Strategic Planning</strong>
 								<div class="sub-head-list">Founder/Head of GIS</div>
 								<div class="sub-head-list">11/2015 - present</div>
@@ -100,6 +107,17 @@
 									<li class="resume-list">Desktop Application development: creating standalone desktop applications to help staff streamline workflow and process/archive data</li>
 									<li class="resume-list">Client Reviews:
 									<a href="clio-2017-01-17-stamford-hist-soc-testimonial-img_1.jpg" target="_blank">Claudia Wolen</a>, Education Coordinator, Stamford Historical Society</li>
+								</ul>
+							<strong>WyzAnt Tutoring, Inc.</strong>
+								<div class="sub-head-list">GIS, Geospatial, History, and Digital Humanities Tutor</div>
+								<div class="sub-head-list">10/2014 - present</div>
+								<ul>
+									<li class="resume-list"><a href="2017-11-14-tutor-all.pdf" target="_blank">Student Projects</a></li>
+									<li class="resume-list">Tutor graduate and undergraduate level GIS practices, system and database administration, and geospatial analytics</li>
+									<li class="resume-list">Graduate and undergraduate level history tutor - focus on analytical writing and Digital Humanities research</li>
+									<!--<li class="resume-list"><a href="2016-04-20-tutor-haneen-talal-fracking-project.pdf" target="_blank">Haneen Talal - Fracking Project</a></li>
+									<li class="resume-list"><a href="2017-10-25-tutor-mike-moran-wilton-land-trust-map.pdf" target="_blank">Mike Moran - Wilton, CT Land Trust Annual Assessment</a></li>
+									<li class="resume-list"><a href="2017-11-11-tutor-ritchele-saint-louis-raster-analysis.jpg" target="_blank">Ritchele Saint Louis - Raster Analysis Central Park, NYC</a></li>-->
 								</ul>
 							<strong><a href="https://www.kljeng.com/" target="_blank">KLJ Engineering</a>: St. Paul, MN Office</strong>
 								<div class="sub-head-list">GIS Analyst</div>
@@ -121,17 +139,6 @@
 									<li class="resume-list">Work directly with students interested in GIS projects on campus. Provide tutoring services as well as connecting students with resources on campus and online</li><li class="resume-list">In development of Web Mapping Service to display lab data, as well as host data online and provide links to our website for students to download directly</li>
 									<li class="resume-list"><a href="2018-01-24-chse-tast.jpg" target="_blank">Ten ft. by five ft. vynal map of Transatlantic Slave Trade</a></li>
 									<li class="resume-list"></li>
-								</ul>
-							<strong>WyzAnt Tutoring, Inc.</strong>
-								<div class="sub-head-list">GIS, Geospatial, History, and Digital Humanities Tutor</div>
-								<div class="sub-head-list">10/2014 - 06/2018</div>
-								<ul>
-									<li class="resume-list"><a href="2017-11-14-tutor-all.pdf" target="_blank">Student Projects</a></li>
-									<li class="resume-list">Tutor graduate and undergraduate level GIS practices, system and database administration, and geospatial analytics</li>
-									<li class="resume-list">Graduate and undergraduate level history tutor - focus on analytical writing and Digital Humanities research</li>
-									<!--<li class="resume-list"><a href="2016-04-20-tutor-haneen-talal-fracking-project.pdf" target="_blank">Haneen Talal - Fracking Project</a></li>
-									<li class="resume-list"><a href="2017-10-25-tutor-mike-moran-wilton-land-trust-map.pdf" target="_blank">Mike Moran - Wilton, CT Land Trust Annual Assessment</a></li>
-									<li class="resume-list"><a href="2017-11-11-tutor-ritchele-saint-louis-raster-analysis.jpg" target="_blank">Ritchele Saint Louis - Raster Analysis Central Park, NYC</a></li>-->
 								</ul>
 							<strong><a href="https://www.raslanforansonia.com/" target="_blank">Raslan for Mayor: Ansonia, CT</a></strong>
 								<div class="sub-head-list">Campaign Manager and Geospatial Consultant</div>
@@ -422,7 +429,7 @@
 	</div>
 
 	<a href="#">
-		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : April 9th, 2019
+		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : July 14th, 2021
 		</footer>
 	</a>
 
