--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -63,7 +63,7 @@
 
 		<header>
 
-			<strong><a class="resume-short" href="resume-short-07-15-21.pdf" target="_blank">One Page (compressed) Resume - follow this link</a></strong>
+			<strong><a class="resume-short" href="resume-short-01-26-22.pdf" target="_blank">One Page (compressed) Resume - follow this link</a></strong>
 
 			<div class="log-divider">. . . . . . .</div>
 
@@ -88,11 +88,19 @@
 					<section>
 						<h2 class="resume-headline">Experience</h2>
 							<strong>Xcel Energy</strong>
-								<div class="sub-head-list">GIS Technician II, Utility GIS</div>
+								<div class="sub-head-list">GIS Technician I, Electric Utility GIS</div>
 								<div class="sub-head-list">12/2019 - present</div>
 								<ul>
 									<li class="resume-list">GIS Technician in Electric Division of Geospatial Department</li>
+									<li class="resume-list">Specializations:</li>
+									<li class="resume-list">Electric Vehicle Infrastructure Mapping</li>
+									<li class="resume-list">-contributed to reference material for mapping protocol.</li>
 									<li class="resume-list">Quality Control of GIS and Electric Distribution Grid Data as part of Advanced Distribution Management System (ADMS) Team</li>
+									<li class="resume-list">-ADMS provides our distribution control centers with new visibility and advanced capabilities to monitor and control the electric distribution grid. This includes enablement of advanced functionality of Fault Location, Isolation and Service Restoration that when enabled provides outage location prediction and enhanced outage response.</li>
+									<li class="resume-list">-ADMS also provides near real-time solutions that enable Xcel Energy to support increased demand and integration of distributed generation from clean energy sources.</li>
+									<li class="resume-list">Electric On Hold Work Order processing</li>
+									<li class="resume-list">-Proficiency with SAP and CRS to review business operations and customer relations.</li>
+									<li class="resume-list">-Outreach to company Linemen and construction Foremen to obtain missing information.</li>
 								</ul>
 							<strong>ClioGraphica | Information Mapping for Strategic Planning</strong>
 								<div class="sub-head-list">Founder/Head of GIS</div>
@@ -429,7 +437,7 @@
 	</div>
 
 	<a href="#">
-		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : July 14th, 2021
+		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : January 26th, 2022
 		</footer>
 	</a>
 
