--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -93,8 +93,9 @@
 								<ul>
 									<li class="resume-list">Specializations:</li>
 									<li class="resume-list">Electric Vehicle Infrastructure Mapping</li>
-									<li class="resume-list">-contributed to reference material for mapping protocol</li>
-									<li class="resume-list">Quality Control of GIS and Electric Distribution Grid Data as part of Advanced Distribution Management System (ADMS) Team</li>
+									<li class="resume-list">-Contributed to reference material for mapping protocol</li>
+									<li class="resume-list">Advanced Distribution Management System (ADMS) Team</li>
+									<li class="resume-list">-Quality Control of GIS and Electric Distribution Grid Data</li>
 									<li class="resume-list">-ADMS provides our distribution control centers with new visibility and advanced capabilities to monitor and control the electric distribution grid. This includes enablement of advanced functionality of Fault Location, Isolation and Service Restoration that when enabled provides outage location prediction and enhanced outage response</li>
 									<li class="resume-list">-ADMS also provides near real-time solutions that enable Xcel Energy to support increased demand and integration of distributed generation from clean energy sources</li>
 									<li class="resume-list">Electric On Hold Work Order processing</li>
