--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -116,7 +116,7 @@
 									<li class="resume-list">Client Reviews:
 									<a href="clio-2017-01-17-stamford-hist-soc-testimonial-img_1.jpg" target="_blank">Claudia Wolen</a>, Education Coordinator, Stamford Historical Society</li>
 								</ul>
-							<strong>WyzAnt Tutoring, Inc.</strong>
+							<strong>Wyzant Tutoring, Inc.</strong>
 								<div class="sub-head-list">GIS, Geospatial, History, and Digital Humanities Tutor</div>
 								<div class="sub-head-list">10/2014 - present</div>
 								<ul>
