--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -100,7 +100,7 @@
 									<li class="resume-list">-ADMS provides our distribution control centers with new visibility and advanced capabilities to monitor and control the electric distribution grid. This includes enablement of advanced functionality of Fault Location, Isolation and Service Restoration that when enabled provides outage location prediction and enhanced outage response</li>
 									<li class="resume-list">-ADMS also provides near real-time solutions that enable Xcel Energy to support increased demand and integration of distributed generation from clean energy sources</li>
 									<li class="resume-list">Electric On Hold Work Order processing</li>
-									<li class="resume-list">-Proficiency with utility operations software SAP, BUD, and CRS to review business and customer relations</li>
+									<li class="resume-list">-Proficiency with utility operations software SAP, BUD, Oracle NMS, and CRS to review business and customer relations</li>
 									<li class="resume-list">-Rectify GIS mapping errors based on company documents and field collected data.</li>
 									<li class="resume-list">-Outreach with field crews to obtain missing information</li>
 								</ul>
