--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -63,7 +63,7 @@
 
 		<header>
 
-			<strong><a class="resume-short" href="resume-short-02-04-22.pdf" target="_blank">One Page (compressed) Resume - follow this link</a></strong>
+			<strong><a class="resume-short" href="resume-short-07-22-22.pdf" target="_blank">One Page (compressed) Resume - follow this link</a></strong>
 
 			<div class="log-divider">. . . . . . .</div>
 
@@ -87,22 +87,15 @@
 
 					<section>
 						<h2 class="resume-headline">Experience</h2>
-							<strong>Xcel Energy</strong>
-								<div class="sub-head-list">GIS Technician I, Electric Utility GIS</div>
-								<div class="sub-head-list">12/2019 - present</div>
+							<strong>Massachusetts Development Finance Agency</strong>
+								<div class="sub-head-list">GIS Specialist</div>
+								<div class="sub-head-list">07/2022 - present</div>
 								<ul>
-									<li class="resume-list">Specializations:</li>
-									<li class="resume-list">Electric Vehicle Infrastructure Mapping</li>
-									<li class="resume-list">-Contributed to reference material for mapping protocol</li>
-									<li class="resume-list">-Coordination with Distribution Transportation team for mapping requirements</li>
-									<li class="resume-list">Advanced Distribution Management System (ADMS) Team</li>
-									<li class="resume-list">-Quality Control of GIS and Electric Distribution Grid Data</li>
-									<li class="resume-list">-ADMS provides our distribution control centers with new visibility and advanced capabilities to monitor and control the electric distribution grid. This includes enablement of advanced functionality of Fault Location, Isolation and Service Restoration that when enabled provides outage location prediction and enhanced outage response</li>
-									<li class="resume-list">-ADMS also provides near real-time solutions that enable Xcel Energy to support increased demand and integration of distributed generation from clean energy sources</li>
-									<li class="resume-list">Electric On Hold Work Order processing</li>
-									<li class="resume-list">-Proficiency with utility operations software SAP, BUD, Oracle NMS, and CRS to review business and customer relations</li>
-									<li class="resume-list">-Rectify GIS mapping errors based on company documents and field collected data</li>
-									<li class="resume-list">-Outreach with field crews to obtain missing information</li>
+									<li class="resume-list">Responsible for design, administration, maintenance, and updating of Devens GIS
+									and CAD, as well as other various agency projects. Primary functions include maintaining Municipal files such as address, parcel, and utility data as well as GPS data collection</li>
+									<li class="resume-list">Conduct exploratory and spatial analysis and provide training on GIS interfaces and workflows for non-GIS staff</li>
+									<li class="resume-list">Develop high-quality cartographic visualizations, assist other departments with related tasks and interface with local, state, and federal agencies</li>
+									<li class="resume-list">Collaborate with other agency divisions and departments such as Information Technology, Community Development, Marketing, various Assessor offices, Devens Fire Department, Devens Department of Public Works and Recreation, the Massachusetts State Police, and others</li>
 								</ul>
 							<strong>ClioGraphica | Information Mapping for Strategic Planning</strong>
 								<div class="sub-head-list">Founder/Head of GIS</div>
@@ -129,6 +122,23 @@
 									<li class="resume-list"><a href="2017-10-25-tutor-mike-moran-wilton-land-trust-map.pdf" target="_blank">Mike Moran - Wilton, CT Land Trust Annual Assessment</a></li>
 									<li class="resume-list"><a href="2017-11-11-tutor-ritchele-saint-louis-raster-analysis.jpg" target="_blank">Ritchele Saint Louis - Raster Analysis Central Park, NYC</a></li>-->
 								</ul>
+							<strong>Xcel Energy</strong>
+								<div class="sub-head-list">GIS Technician I: Electric Utility GIS</div>
+								<div class="sub-head-list">12/2019 - 07/2022</div>
+								<ul>
+									<li class="resume-list">Specializations:</li>
+									<li class="resume-list">Electric Vehicle Infrastructure Mapping</li>
+									<li class="resume-list">-Contributed to reference material for mapping protocol</li>
+									<li class="resume-list">-Coordination with Distribution Transportation team for mapping requirements</li>
+									<li class="resume-list">Advanced Distribution Management System (ADMS) Team</li>
+									<li class="resume-list">-Quality Control of GIS and Electric Distribution Grid Data</li>
+									<li class="resume-list">-ADMS provides our distribution control centers with new visibility and advanced capabilities to monitor and control the electric distribution grid. This includes enablement of advanced functionality of Fault Location, Isolation and Service Restoration that when enabled provides outage location prediction and enhanced outage response</li>
+									<li class="resume-list">-ADMS also provides near real-time solutions that enable Xcel Energy to support increased demand and integration of distributed generation from clean energy sources</li>
+									<li class="resume-list">Electric On Hold Work Order processing</li>
+									<li class="resume-list">-Proficiency with utility operations software SAP, BUD, Oracle NMS, and CRS to review business and customer relations</li>
+									<li class="resume-list">-Rectify GIS mapping errors based on company documents and field collected data</li>
+									<li class="resume-list">-Outreach with field crews to obtain missing information</li>
+								</ul>	
 							<strong><a href="https://www.kljeng.com/" target="_blank">KLJ Engineering</a>: St. Paul, MN Office</strong>
 								<div class="sub-head-list">GIS Analyst</div>
 								<div class="sub-head-list">10/2018 - 06/2019</div>
@@ -439,7 +449,7 @@
 	</div>
 
 	<a href="#">
-		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : February 4th, 2022
+		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : July 22nd, 2022
 		</footer>
 	</a>
 
