--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -67,7 +67,7 @@
 
 			<div class="log-divider">. . . . . . .</div>
 
-			<strong class="resume-headline">Researcher/Analyst, Cartographer, GIS Analyst</strong>
+			<strong class="resume-headline">Researcher/Analyst, Cartographer, GIS Specialist</strong>
 			
 			<!--<a class="resume-link" href="https://www.linkedin.com/uas/login" target="_blank">Find me on LinkedIn</a>-->
 
