Adding Living Atlas Maps to portfolio

--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -112,6 +112,20 @@
 
 			<div class="project-link">
 
+				<a href="https://www.arcgis.com/apps/dashboards/7b9e28814e584003b874f675db54b0ce" target="_blank">
+				<img class="project-img" src="LivingAtlas_WildFire_Dashboard_Thumbnail.jpg"/>
+				</a>
+				
+			</div>
+
+			<li class="project-content">
+
+				<p>This is ArcGIS Online Dashboard focuses on current Wildfires in the USA. The datasets used in this dashboard are regularly updated via ESRI's Live Feeds program.<a href="https://www.arcgis.com/home/item.html?id=d957997ccee7408287a963600a77f61f" target="_blank">Click here</a> to get a deeper overview of the data you see in this map.</p>
+			
+			</li>
+
+			<div class="project-link">
+
 				<a href="clio-2017-12-24-world-colored-final.jpg" target="_blank">
 				<img class="project-img" src="clio-2017-12-24-world-colored-final-display.jpg"/>
 				</a>
