--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -112,7 +112,7 @@
 
 			<div class="project-link">
 
-				<a href="https://www.arcgis.com/apps/dashboards/0926d55625104bf89c6688f78e916e69" target="_blank">
+				<a href="https://www.arcgis.com/apps/dashboards/7b9e28814e584003b874f675db54b0ce" target="_blank">
 				<img class="project-img" src="LivingAtlas_WildFire_Dashboard_Thumbnail.jpg"/>
 				</a>
 				
@@ -120,7 +120,7 @@
 
 			<li class="project-content">
 
-				<p>This is ArcGIS Online Dashboard focuses on current Wildfires in the USA. The datasets used in this dashboard are regularly updated via ESRI's Live Feeds program. <a href="https://www.arcgis.com/home/item.html?id=d957997ccee7408287a963600a77f61f" target="_blank">Click here</a> to get a deeper overview of the data you see in this map.</p>
+				<p>This is ArcGIS Online Dashboard focuses on current Wildfires in the USA. The datasets used in this dashboard are regularly updated via ESRI's Live Feeds program. You can navigate this dashboard on your <a href="https://www.arcgis.com/apps/dashboards/0926d55625104bf89c6688f78e916e69" target="_blank">mobile device here</a>. For an overview of the data you see in this map, visit the <a href="https://www.arcgis.com/home/item.html?id=d957997ccee7408287a963600a77f61f" target="_blank">USA Current Wildfires feature layer by ESRI</a>.</p>
 			
 			</li>
 
