--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -449,7 +449,7 @@
 	</div>
 
 	<a href="#">
-		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : July 22nd, 2022
+		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : April 8th, 2023
 		</footer>
 	</a>
 
